tests/compile/shader_modules/attribute_stream.expected
#ifdef __clang__
In file included from attribute_stream.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:122:4: error: static assertion failed due to requirement '(rcgp::ShaderStage)2 == rcgp::ShaderStage::eVertex || (rcgp::ShaderStage)2 == rcgp::ShaderStage::eSubroutine': AttributeStream is only valid for vertex or subroutine shaders
  122 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eFragment, rcgp::AttributeStream<rcgp::vector<float, 3>>, position>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eFragment, rcgp::jems::null, rcgp::contract<position>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
In file included from attribute_stream.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:122:4: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eVertex || (rcgp::ShaderStage)3 == rcgp::ShaderStage::eSubroutine': AttributeStream is only valid for vertex or subroutine shaders
  122 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eCompute, rcgp::AttributeStream<rcgp::vector<float, 3>>, position>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, rcgp::jems::null, rcgp::contract<position>, rcgp::WorkGroup<1>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
2 errors generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/meta/function_construction.hpp:9,
                 from include/rcgp-meta.hpp:13,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/attribute_stream.cpp:1:
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(contract<ref>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eFragment; R = AttributeStream<vector<float, 3> >; R& ref = (& position)]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eFragment, jems::null, contract<position> >(std::tuple<jems::null, contract<position> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eFragment; Args = {jems::null, contract<position>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:97 = attribute_stream_in_fragment()::<lambda(jems::null, contract<position>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:98 = attribute_stream_in_fragment()::<lambda(jems::null, contract<position>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/attribute_stream.cpp:25:2:   required from here
   25 |         };
      |         ^
include/meta/inject_arguments.hpp:122:51: error: static assertion failed: AttributeStream is only valid for vertex or subroutine shaders
  122 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  • '((rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex) || (rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eSubroutine))' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(contract<ref>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eCompute; R = AttributeStream<vector<float, 3> >; R& ref = (& position)]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, jems::null, contract<position>, WorkGroup<1, 1, 1> >(std::tuple<jems::null, contract<position>, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1, 2}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1, 2>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {jems::null, contract<position>, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:97 = attribute_stream_in_compute()::<lambda(jems::null, contract<position>, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:98 = attribute_stream_in_compute()::<lambda(jems::null, contract<position>, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/attribute_stream.cpp:30:74:   required from here
   30 |         auto bad = $shader(compute)($contracts(position), WorkGroup <1> group) {};
      |                                                                                 ^
include/meta/inject_arguments.hpp:122:51: error: static assertion failed: AttributeStream is only valid for vertex or subroutine shaders
  122 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  • '((rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eVertex) || (rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eSubroutine))' evaluates to false
#elif __GNUC__ == 15
In file included from include/meta/function_construction.hpp:9,
                 from include/rcgp-meta.hpp:13,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/attribute_stream.cpp:1:
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(contract<ref>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eFragment; R = AttributeStream<vector<float, 3> >; R& ref = (& position)]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eFragment, jems::null, contract<position> >(std::tuple<jems::null, contract<position> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eFragment; Args = {jems::null, contract<position>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:101 = attribute_stream_in_fragment()::<lambda(jems::null, contract<position>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eFragment; auto:102 = attribute_stream_in_fragment()::<lambda(jems::null, contract<position>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/attribute_stream.cpp:25:2:   required from here
   25 |         };
      |         ^
include/meta/inject_arguments.hpp:122:51: error: static assertion failed: AttributeStream is only valid for vertex or subroutine shaders
  122 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:122:51: note: '((rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eVertex) || (rcgp::ShaderStage::eFragment == rcgp::ShaderStage::eSubroutine))' evaluates to false
include/meta/inject_arguments.hpp: In instantiation of 'void rcgp::inject_one_argument(contract<ref>&, InjectionCounters&) [with ShaderStage S = rcgp::ShaderStage::eCompute; R = AttributeStream<vector<float, 3> >; R& ref = (& position)]':
include/meta/inject_arguments.hpp:178:2:   required from 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, jems::null, contract<position>, WorkGroup<1, 1, 1> >(std::tuple<jems::null, contract<position>, WorkGroup<1, 1, 1> >&)::<lambda(std::index_sequence<Is ...>)> [with long unsigned int ...Is = {0, 1, 2}; std::index_sequence<Is ...> = std::integer_sequence<long unsigned int, 0, 1, 2>]'
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:178:2:   required from 'void rcgp::inject_arguments(std::tuple<_Elements ...>&) [with ShaderStage S = rcgp::ShaderStage::eCompute; Args = {jems::null, contract<position>, WorkGroup<1, 1, 1>}]'
    7 |         [&] <size_t ... name> (std::index_sequence <name...>) { \
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |                 __VA_ARGS__;                                    \
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         } (std::make_index_sequence <N> ())
      |         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/function_construction.hpp:53:24:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = attribute_stream_in_compute()::<lambda(jems::null, contract<position>, WorkGroup<1>)>]'
   53 |                 inject_arguments <S> (args);
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = attribute_stream_in_compute()::<lambda(jems::null, contract<position>, WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/attribute_stream.cpp:30:74:   required from here
   30 |         auto bad = $shader(compute)($contracts(position), WorkGroup <1> group) {};
      |                                                                                 ^
include/meta/inject_arguments.hpp:122:51: error: static assertion failed: AttributeStream is only valid for vertex or subroutine shaders
  122 |                         S == ShaderStage::eVertex || S == ShaderStage::eSubroutine,
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/inject_arguments.hpp:122:51: note: '((rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eVertex) || (rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eSubroutine))' evaluates to false
#endif
#endif
